Fixed issue on small screens

--- a/src/app/main.module/recipes.module/recipes.component/recipe-card.component/recipe-card.component.mobile.less
+++ b/src/app/main.module/recipes.module/recipes.component/recipe-card.component/recipe-card.component.mobile.less
@@ -4,10 +4,12 @@
 @media all and (max-width: @screen-size-mobile-max-width) {
     .recipe-card-component {
         flex-direction: column;
-    
+        min-width: 100%;
+
         .recipe-card-image {
             width: 100%;
             min-height: 200px;
+            min-width: 100%;
 
             img {
                 border-radius: 10px 10px 0 0;
